--- a/final_report_telco.ipynb
+++ b/final_report_telco.ipynb
@@ -53,7 +53,7 @@
     "- My best model used Logistic Regression to predict customers who will churn with 80% accuracy. This model outperformed my baseline score of 73.47% accuracy, so it has value.\n",
     "\n",
     "### Project Overview\n",
-    "- Trello board used to identify the different tasks for this project. You can find the board here\n",
+    "- Trello board used to identify the different tasks for this project. You can find the board <a href=\"https://trello.com/b/lU0bjeXw/predicting-customer-churn\">here</a>\n",
     "- Python scripts were used to acquire, prepare and explore the data\n",
     "- All the models predicted churn with an accuracy higher than the baseline model\n",
     "- Statistical analyses tested the following hypotheses:\n",
@@ -63,7 +63,7 @@
     "    4. There is no linear correlation between tenure and monthly charges\n",
     " \n",
     "### Data Dictionary\n",
-    "The data dictionary detailing all variables utilized in this analyses can be found here.\n",
+    "The data dictionary detailing all variables utilized in this analyses can be found <a href=\"https://github.com/mariamnaqvi/predicting_customer_churn/blob/main/README.md\">here</a>.\n",
     "\n",
     "Telco is attempting to figure out the drivers of churn amongst its customers. Churn is defined as when a customer leaves the company.\n",
     "\n",
@@ -3030,9 +3030,9 @@
     "- For a 1-tailed test where our alternative hypothesis is testing for \"greater than\", we evaluate 𝑝/2 < 𝛼 and 𝑡 > 0.\n",
     "\n",
     "### Setting Hypothesis\n",
-    "$H_{0}$: Mean monthly charges of customers who churned = Mean of monthly charges of all customers\n",
+    "$H_{0}$: Mean monthly charges of customers who churned = Mean monthly charges of all customers\n",
     "\n",
-    "$H_{a}$: Mean monthly charges of customers who churned > Mean of monthly charges of all customers\n",
+    "$H_{a}$: Mean monthly charges of customers who churned > Mean monthly charges of all customers\n",
     "\n",
     "### Set Alpha\n",
     "alpha =0.01\n",
@@ -3637,7 +3637,7 @@
     "- chi sq test\n",
     "\n",
     "### Setting Hypothesis\n",
-    "$H_{0}$: Churn rate is independent of month to month contract\n",
+    "$H_{0}$: Churn is independent of month to month contract\n",
     "\n",
     "$H_{a}$: Churn is not independent of month to month contract\n",
     "\n",
@@ -4081,6 +4081,7 @@
     "\n",
     "- For all models I have used only the above mentioned features to predict churn\n",
     "- Models created using Decision Tree, Random Forest, KNN and Logistic Regression Algorithms\n",
+    "- Models were fitted on train dataset and evaluated on validate split\n",
     "- I will test only the best performing model based on overall accuracy and recall scores"
    ]
   },
@@ -5603,6 +5604,8 @@
    "source": [
     "# Create Predictions CSV\n",
     "\n",
+    "The predictions csv file <a href=\"https://github.com/mariamnaqvi/predicting_customer_churn/blob/main/predictions.csv\">here</a> shows the customer id, probability of churn and the model's prediction.\n",
+    "\n",
     "Churn = 0 means a customer will not churn \n",
     "\n",
     "Churn = 1 means  a customer will churn\n"
@@ -6477,7 +6480,7 @@
     "# Conclusion & Next Steps\n",
     "\n",
     "- My Logistic Regression Model will predict customers at risk of churning with 80% accuracy.\n",
-    "- If i had more time, I would:\n",
+    "- If I had more time, I would:\n",
     "    - explore the outliers in more detail\n",
     "    - examine factors leading to customers with higher monthly charges staying for longer tenures \n",
     "    - explore premium services and their effect on churn more\n"
