--- a/final_report_telco.ipynb
+++ b/final_report_telco.ipynb
@@ -63,37 +63,7 @@
     "    4. There is no linear correlation between tenure and monthly charges\n",
     " \n",
     "### Data Dictionary\n",
-    "The data dictionary detailing all variables utilized in this analyses can be found <a href=\"https://github.com/mariamnaqvi/predicting_customer_churn/blob/main/README.md\">here</a>.\n",
-    "\n",
-    "Telco is attempting to figure out the drivers of churn amongst its customers. Churn is defined as when a customer leaves the company.\n",
-    "\n",
-    "### Goals\n",
-    "    - Find drivers for customer churn at Telco.\n",
-    "    - Construct a ML classification model that accurately predicts customer churn.\n",
-    "    - Provide my findings and takeaways in a report.\n",
-    "    \n",
-    "- Pipeline Tasks\n",
-    "    - Acquiring the data from the codeup database\n",
-    "    - Taking appropriate steps to clean the dataset\n",
-    "    - Splitting the data into train, validate and test dataframes\n",
-    "    - Exploring the data to aid in feature selection\n",
-    "    - Creating and fitting models utilizing various classification algorithms on in sample data\n",
-    "    - Testing the models' accuracies on out of sample data (i.e. the validate split)\n",
-    "    - Selecting the best performing model and evaluating its performance on the test split\n",
-    "    \n",
-    "- Data Dictionary\n",
-    "\n",
-    "- Starting Hypotheses\n",
-    "- Create README.md with data dictionary, project and business goals, come up with initial hypotheses.\n",
-    "- Acquire data from the Codeup Database and create a function to automate this process. Save the function in an acquire.py file to import into the Final Report Notebook.\n",
-    "- Clean and prepare data for the first iteration through the pipeline, MVP preparation. Create a function to automate the process, store the function in a prepare.py module, and prepare data in Final Report Notebook by importing and using the funtion.\n",
-    "- Clearly define two hypotheses, set an alpha, run the statistical tests needed, reject or fail to reject the Null Hypothesis, and document findings and takeaways.\n",
-    "- Establish a baseline accuracy and document well.\n",
-    "- Train three different classification models.\n",
-    "- Evaluate models on train and validate datasets.\n",
-    "- Choose the model with that performs the best and evaluate that single model on the test dataset.\n",
-    "- Create csv file with the customer id, the probability of the target values, and the model's prediction for each observation in my test dataset.\n",
-    "- Document conclusions, takeaways, and next steps in the Final Report Notebook."
+    "The data dictionary detailing all variables utilized in this analyses can be found <a href=\"https://github.com/mariamnaqvi/predicting_customer_churn/blob/main/README.md\">here</a>."
    ]
   },
   {
@@ -3009,10 +2979,10 @@
     "   - monthly_charges\n",
     "   - en_has_fiber\n",
     "   - payment_type_id\n",
-    "   - tenure\n",
-    "   - en_contract_type \n",
+    "   - tenure \n",
     "   - en_monthly_contract\n",
     "    \n",
+    "Correlation, Chi square and t-tests were performed.\n",
     "For all of the following statistical tests, a confidence level of 99% an alpha of 0.01 is used\n",
     "\n",
     "Confidence level = 0.99\n",
@@ -4059,18 +4029,6 @@
    "source": [
     "# drop the baseline column from train df\n",
     "train.drop(columns='baseline', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# based on the correlation and the statistical tests performed, I will be using the following features in my models\n",
-    "\n",
-    "features=['en_monthly_contract','en_has_fiber','has_internet','monthly_charges','has_paperless_billing', 'senior_citizen',\n",
-    "'en_contract_type','tenure','payment_type_id','total_charges']"
    ]
   },
   {
