--- a/final_report_telco.ipynb
+++ b/final_report_telco.ipynb
@@ -2228,6 +2228,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring Multivariate Relationships\n",
+    "\n",
+    "The explore_multivariate function in my explore script is used to generate boxplots showing customers who churned and didnt for each class of categorical variables against quantitatuve variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
