--- a/final_report_telco.ipynb
+++ b/final_report_telco.ipynb
@@ -48,6 +48,7 @@
     "\n",
     "### Key Takeaways\n",
     "- Overall churn rate is at 27%\n",
+    "- Churn Rate decreases as tenure increases\n",
     "- Monthly charges for customers who churn are 21% higher than customers who don't churn\n",
     "- Month to month contracts had the highest number of churning customers\n",
     "- My best model used Logistic Regression to predict customers who will churn with 80% accuracy. This model outperformed my baseline score of 73.47% accuracy, so it has value.\n",
