typo & minor changes

--- a/final_report_telco.ipynb
+++ b/final_report_telco.ipynb
@@ -2234,7 +2234,7 @@
    "source": [
     "### Exploring Multivariate Relationships\n",
     "\n",
-    "The explore_multivariate function in my explore script is used to generate boxplots showing customers who churned and didnt for each class of categorical variables against quantitatuve variables"
+    "The explore_multivariate function in my explore script is used to generate boxplots showing customers who churned and didnt for each class of categorical variables against quantitative variables"
    ]
   },
   {
@@ -6547,6 +6547,7 @@
    "source": [
     "# Conclusion & Next Steps\n",
     "\n",
+    "- There are factors leading to certain customers churning at a higher rate than others\n",
     "- My Logistic Regression Model will predict customers at risk of churning with 80% accuracy.\n",
     "- If I had more time, I would:\n",
     "    - explore the outliers in more detail\n",
